# humble-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: pre-commit.yml
.kiro/specs/humble-tools-architecture/: design.md  gap-analysis.md  requirements.md
docs/: SPEC_CONCURRENT_DOWNLOADS.md
docs/dev/: IMPLEMENTATION.md  TODO.md
docs/dev/app_refactor/: APP_ANALYSIS_AND_REFACTORING.md  PHASE_1_CRITICAL_FIXES.md  PHASE_1_IMPLEMENTATION_COMPLETE.md  PHASE_2_EXTRACT_CONFIGURATION.md  PHASE_2_IMPLEMENTATION_COMPLETE.md  PHASE_3_IMPLEMENTATION_COMPLETE.md  PHASE_3_SUMMARY.md  PHASE_4_SEPARATE_CONCERNS.md  PHASE_5_ENHANCED_ERROR_HANDLING.md  PHASE_6_COMPREHENSIVE_DOCUMENTATION.md  PHASE_7A_UNIT_TESTS.md  PHASE_7B_INTEGRATION_TESTS.md
docs/dev/architecture_refactor/: ARCHITECTURE_ANALYSIS.md  README.md  REFACTOR_A_QUICK_WINS.md  REFACTOR_B_STRUCTURAL.md  REFACTOR_D_TOOLING.md  (+1 more)
src/humble_tools/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_integration_downloads.py  test_integration_screens.py
tests/test_core/: test_display.py  test_download_manager.py  test_humble_wrapper.py  test_tracker.py
tests/test_sync/: test_app.py  test_concurrent_downloads.py
tests/unit/: __init__.py  test_bundle_details_helpers.py  test_config.py  test_constants.py  test_display.py  test_download_manager.py  test_download_queue.py  test_exceptions.py  test_format_utils.py  test_humble_wrapper.py  test_item_format_row.py  test_thread_safety.py  test_tracker.py  test_validation.py
(+37 files in other folders)
